--- a/apps/web/src/shell/DesktopShell.module.css
+++ b/apps/web/src/shell/DesktopShell.module.css
@@ -643,6 +643,8 @@
 }
 
 .windowBodyViewport {
+  display: grid;
+  grid-template-rows: minmax(0, 1fr);
   min-height: 0;
 }
 
